--- a/读书笔记/你不知道的js/5.闭包.md
+++ b/读书笔记/你不知道的js/5.闭包.md
@@ -27,6 +27,8 @@ baz(); // 2 —— 朋友，这就是闭包的效果。
 
 bar() 依然持有对该作用域的引用，而这个引用就叫作闭包。
 
+如果要将`bar`的内存空间释放，使其引用数为零即可，这里是baz保存着对bar的引用，baz = null即可清除引用，从而触发垃圾回收
+
 ## 常见闭包
 
 闭包的特点是函数在定义时的词法作用域之外执行，而函数始终能够访问定义时的词法作用域，回调函数都是闭包的表现。
@@ -59,7 +61,7 @@ for (var i = 1; i <= 5; i++) {
 
 现在需要多个作用域来保存当前 i 的值，IIFE 会通过声明并立即执行一个函数来创建作用域。
 
-```js
+```javascript
 for (var i < 1; i < 5; i++) {
     (function() {
         setTimeout(function timer() {
